# awaves-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_change_surf_timestamp_to_timestamp.py  001_refactor_feedback_table.py  002_change_feedback_user_id_fk_to_set_null.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/core/: exceptions.py  handlers.py  logging.py  middleware.py  timezone.py  tracing.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/graphql/: __init__.py  context.py  dataloaders.py  schema.py
apps/api/app/middleware/: metrics.py
apps/api/app/ml_models/: inference.py
apps/api/app/models/: __init__.py  feedback.py  user.py
apps/api/app/repositories/: __init__.py  base_repository.py  saved_list_repository.py  surf_data_repository.py  user_repository.py
apps/api/app/routers/: __init__.py  admin.py  auth.py  feedback.py  register.py  saved.py  search.py  surf.py
apps/api/app/schemas/: __init__.py  feedback.py  saved.py  surf.py  user.py
apps/api/app/scripts/: fix_saved_list_grades.py  fix_surf_grades.py  ingest_korean_translations.py  ingest_locations_from_csv.py  revert_saved_list_grades_to_numeric.py
apps/api/app/services/: auth.py  cache.py  dynamodb.py  llm_summary_service.py  opensearch_service.py  prediction_service.py  search_service.py  user_service.py  (+2 more)
apps/api/tests/: __init__.py  conftest.py  test_register.py
(+249 files in other folders)
